NIM-15729 Update checksums

--- a/docs/releases/release_notes/6.10.md
+++ b/docs/releases/release_notes/6.10.md
@@ -14,7 +14,18 @@ tags: ["draft"]
 
 --8<-- "snippets/clear_browser_cache.md"
 
-## v6.10.0 (UNRELEASED)
+## v6.10.4 (October 21st, 2024; GA)
+
+```
+SHA256 (ipfabric-update-6-10-4+0.tar.gz.sig) = fa6e94456a842e03a740c1b8ebae66fa26bd14d55667b0dcb732e06b925eac5b
+MD5 (ipfabric-update-6-10-4+0.tar.gz.sig) = e93ed0db74f6c24fab801c1ea6f8a3da
+SHA256 (ipfabric-6-10-4+0.ova) = ee5d9148b4ef8060421e37b5866bb8c411db7873e3e6ba7001a826662c1cc353
+MD5 (ipfabric-6-10-4+0.ova) = 4ebd3b8329947dc46f4e5fbe66e0148d
+SHA256 (ipfabric-6-10-4+0.qcow2) = 7b9809fb92feff9fb9f3bbb521e562d132d05cd0dfcfdd01c0e9cdc0b63d0347
+MD5 (ipfabric-6-10-4+0.qcow2) = 01cb0fb21fc7adc6f1e58b5c03a1cf32
+SHA256 (ipfabric-6-10-4+0.vmdk) = 5668857bfb46be8349e9744046be6495c00e2a6a3042598fd2c6f219e876e8c0
+MD5 (ipfabric-6-10-4+0.vmdk) = f22702794e6b0ab626ff09228066da7e
+```
 
 ### New Upgrade Process
 
@@ -43,7 +54,14 @@ upgrade service.
 This service requires re-authentication with `osadmin` account, even if you are
 already logged in the System Administration interface.
 
-![Authentication for 7.x upgrades](6.10_authenticate_for_7x_upgrades.png)
+![Authentication for 7.x upgrades](6.10_authenticate_for_7x_upgrades.png){: .center}
+
+!!! Note
+
+    If you have disabled sign-in pop-ups (i.e., the sign-in window does not
+    appear), you can log in directly using the following URL:
+
+    `https://osadmin:<password>@<IP Fabric FQDN or URL>`
 
 After successful authentication, the new upgrade interface appears, providing
 two options:
