NIM-16268 Discovery force-stop

--- a/docs/releases/release_notes/7.0.md
+++ b/docs/releases/release_notes/7.0.md
@@ -32,10 +32,18 @@ If you are using custom Role-Based Access Control (RBAC) to restrict access to c
 
 - **Shareable Snapshot and Tables** -- Easily share specific [snapshot](../../IP_Fabric_GUI/discovery_snapshot.md#create-url-pointing-to-specific-snapshot), and [tables (including a snapshot ID and full filter representation)](../../IP_Fabric_GUI/technology_tables/index.md#create-links-to-table-views) with your team using shareable links in the GUI.
 
-- Added support for [URL links that point to a specific
+  - Added support for [URL links that point to a specific
   snapshot](../../IP_Fabric_GUI/discovery_snapshot.md#create-url-pointing-to-specific-snapshot).
-- Links to tables can now be shared [with a snapshot ID and full filter
+  - Links to tables can now be shared [with a snapshot ID and full filter
   representation](../../IP_Fabric_GUI/technology_tables/index.md#create-links-to-table-views).
+
+- **Discovery force stop** -- A new **[Force Stop](../../IP_Fabric_GUI/discovery_snapshot.md#force-stopping-discovery)** button has been added next to the **Stop** button for immediate discovery termination.
+
+  !!! Warning "If You Choose to Force Stop Discovery"
+
+      The snapshot data may be inconsistent and unusable.
+
+      To ensure UI access is maintained after a discovery **Force Stop**, any system jobs scheduled to start afterward will be cancelled.
 
 #### Cloud
 
@@ -108,7 +116,7 @@ If you are using custom Role-Based Access Control (RBAC) to restrict access to c
       The data collected for this table can be substantial, so the task **BGP Advertised Routes** is disabled by default.
 
       This table will only populate if the related collector task is explicitly enabled.
-      
+
       To enable it, delete the **BGP Advertised Routes** rule from the list under **Settings --> Discovery & Snapshots --> Discovery Settings --> Disabled Discovery Tasks**.
 
 #### Support for Future Functionality
@@ -162,7 +170,7 @@ Several API endpoints have been updated or removed in this major release. This c
 
 - `/licenses/validity` was updated as it does not need authentication and previously exposed maximum number of devices,
   which can be considered sensitive information.
-  
+
   - The same information can now be retrieved at `/licenses/info`, which requires authentication.
   - The `/licenses/validity` endpoint does not contain `devices` field anymore.
 
