NIM-15929 Document new feature - pinnable pages

--- a/docs/releases/release_notes/7.0.md
+++ b/docs/releases/release_notes/7.0.md
@@ -45,6 +45,8 @@ If you are using custom Role-Based Access Control (RBAC) to restrict access to c
 
       To ensure UI access is maintained after a discovery **Force Stop**, any system jobs scheduled to start afterward will be cancelled.
 
+- **Pinnable Pages in the Technology Tables** -- Each page in the **Technology Tables** can be pinned to the main menu under the **Technology** section, see [Pin Pages to the Main Menu for Quick Access](../../IP_Fabric_GUI/technology_tables/index.md#pin-pages-to-the-main-menu-for-quick-access).
+
 #### Cloud
 
 - **New Cloud Tables** -- New public-cloud tables provide more information for AWS, Azure, and Google Cloud Platform (GCP):
