NIM-16293 Moved Managed IP table

--- a/docs/releases/release_notes/7.0.md
+++ b/docs/releases/release_notes/7.0.md
@@ -33,9 +33,9 @@ If you are using custom Role-Based Access Control (RBAC) to restrict access to c
 - **Shareable Snapshot and Tables** -- Easily share specific [snapshot](../../IP_Fabric_GUI/discovery_snapshot.md#create-url-pointing-to-specific-snapshot), and [tables (including a snapshot ID and full filter representation)](../../IP_Fabric_GUI/technology_tables/index.md#create-links-to-table-views) with your team using shareable links in the GUI.
 
   - Added support for [URL links that point to a specific
-  snapshot](../../IP_Fabric_GUI/discovery_snapshot.md#create-url-pointing-to-specific-snapshot).
+    snapshot](../../IP_Fabric_GUI/discovery_snapshot.md#create-url-pointing-to-specific-snapshot).
   - Links to tables can now be shared [with a snapshot ID and full filter
-  representation](../../IP_Fabric_GUI/technology_tables/index.md#create-links-to-table-views).
+    representation](../../IP_Fabric_GUI/technology_tables/index.md#create-links-to-table-views).
 
 - **Discovery force stop** -- A new **[Force Stop](../../IP_Fabric_GUI/discovery_snapshot.md#force-stopping-discovery)** button has been added next to the **Stop** button for immediate discovery termination.
 
@@ -116,7 +116,7 @@ If you are using custom Role-Based Access Control (RBAC) to restrict access to c
 - **New BGP Table -- Advertised Routes** -- A new table in **Technology --> Routing --> BGP** has been added to provide more information about BGP routes being advertised to neighbors.
 
   !!! Important "BGP Advertised Routes task"
-      The data collected for this table can be substantial, so the task **BGP Advertised Routes** is disabled by default.
+  The data collected for this table can be substantial, so the task **BGP Advertised Routes** is disabled by default.
 
       This table will only populate if the related collector task is explicitly enabled.
 
@@ -214,6 +214,10 @@ Several API endpoints have been updated or removed in this major release. This c
   !!! example "Still Supported URL"
 
       `https://<IPF_IP_or_FQDN>/inventory/os-versions?options={"filters":{"and":[{"version":["eq","15.5(2)T"]},{"platform":["eq","i86bi_linux"]}]}}`
+
+#### Moved table URLs
+
+- Managed IPv4 table was moved from `/technology/addressing/managed-ip` to `/technology/addressing/managed-ip/ipv4`.
 
 ### Intent Rules
 
