NIM-15663 Document admin deprecation, xDP Media introduction

--- a/docs/releases/release_notes/7.0.md
+++ b/docs/releases/release_notes/7.0.md
@@ -106,6 +106,9 @@ If you are using custom Role-Based Access Control (RBAC) to restrict access to c
       If you previously configured `SUBNETS_TO_ALLOW_PROCESSING_DUPLICIT_IP` in the tasker service, you will need to manually set the subnets again in the GUI.
 
 - **Pagination on `actrlRule` API endpoint** -- The Cisco APIC `actrlRule` API endpoint has a default paging size of 50,000 records (previously, the lack of a paging limit led to slow or unsuccessful data collection). The page size can be adjusted using the `ACI_ACTRLRULE_PAGESIZE` configuration flag. Please contact our Support team if you need to lower the default value.
+#### Diagrams
+
+- **Added Media to xDP line cap labels** -- you can now configure diagrams to show Media information as a line cap label for xDP links.
 
 #### Interactive API Documentation
 
@@ -116,7 +119,8 @@ If you are using custom Role-Based Access Control (RBAC) to restrict access to c
 - **New BGP Table -- Advertised Routes** -- A new table in **Technology --> Routing --> BGP** has been added to provide more information about BGP routes being advertised to neighbors.
 
   !!! Important "BGP Advertised Routes task"
-  The data collected for this table can be substantial, so the task **BGP Advertised Routes** is disabled by default.
+
+      The data collected for this table can be substantial, so the task **BGP Advertised Routes** is disabled by default.
 
       This table will only populate if the related collector task is explicitly enabled.
 
@@ -218,6 +222,12 @@ Several API endpoints have been updated or removed in this major release. This c
 #### Moved table URLs
 
 - Managed IPv4 table was moved from `/technology/addressing/managed-ip` to `/technology/addressing/managed-ip/ipv4`.
+
+### System Administration UI Deprecation
+
+System administration UI on port `8443` will be removed in the near future. In 7.0 we are providing replacements for its functionality.
+
+For more details, see the [System Administration UI](../../../System_Administration/System_Administration_UI) documentation.
 
 ### Intent Rules
 
