NIM-16318: add extensions documentation

--- a/docs/releases/release_notes/7.0.md
+++ b/docs/releases/release_notes/7.0.md
@@ -22,6 +22,60 @@ If you are using custom Role-Based Access Control (RBAC) to restrict access to c
 
 ### New Features
 
+#### Extensions (Engineering Preview)
+
+In the 7.0 release, we're introducing Extensions, a new feature that allows users to add and customize their IP Fabric instance with a tailored functionality. Extension can
+
+- Generate custom reports (e.g., DORA)
+- Transform data in real-time (custom tables)
+- Enrich your data through external source integration (CVE information for devices)
+- Implement business-specific processing logic (global search)
+- and much more...
+
+Extensions are managed and access through standard IP Fabric UI under **Extensions** in the main menu.
+
+##### Feature activation
+
+Starting with version 7.0, Extensions can be enabled with `ENABLE_EXTENSIONS=true` [feature flag](../../System_Administration/Command_Line_Interface/Feature_Flags.md) in the global `/etc/default/ipf-appliance-local` file.
+
+##### Flexible deployment options
+
+Extensions supports two streamlined deployment methods:
+
+- **Source Code Deployment**: Submit your source code and `Dockerfile` in a ZIP archive for automated building and deployment
+- **Pre-built Container Deployment**: Upload your pre-built Docker image (container image created with `docker save` command, has to have `.tar` extension) for immediate execution
+
+##### Technical Specifications
+
+- Extensions run as containers alongside your main application
+- Each extension has to listen on port `80/tcp` for incoming traffic
+- Standard communication flows:
+  - Container → Host: Port 443 (for API requests)
+  - Host → Container: Port 80 (for extension UI)
+- Full external network access support for integration with third-party services
+
+##### Storage Considerations
+
+Please note that Extensions utilize temporary storage in the `/tmp` folder for:
+
+- Uploaded source code archives
+- Docker image files
+
+These artifacts are automatically cleaned up according to your system's temporary storage management policies.
+
+##### Access Control and Permissions
+
+Extensions are governed by a set of atomic permissions that can be assigned through security policies. By default, administrative accounts have full access to all Extensions functionality.
+
+Manageable permissions include:
+
+- Viewing Extensions dashboard
+- Registering new Extensions
+- Starting/Stopping Extensions
+- Un-registering Extensions
+
+Each operation requires its specific permission, and unauthorized actions are prevented both at UI level (hidden buttons) and API level (`403 Forbidden responses`).
+
 #### GUI
 
 - **Early Snapshot-Data Availability** -- The GUI now shows available data (tables and diagrams) for snapshots that are still in progress or in an error state.
@@ -106,6 +160,7 @@ If you are using custom Role-Based Access Control (RBAC) to restrict access to c
       If you previously configured `SUBNETS_TO_ALLOW_PROCESSING_DUPLICIT_IP` in the tasker service, you will need to manually set the subnets again in the GUI.
 
 - **Pagination on `actrlRule` API endpoint** -- The Cisco APIC `actrlRule` API endpoint has a default paging size of 50,000 records (previously, the lack of a paging limit led to slow or unsuccessful data collection). The page size can be adjusted using the `ACI_ACTRLRULE_PAGESIZE` configuration flag. Please contact our Support team if you need to lower the default value.
+
 #### Diagrams
 
 - **Added Media to xDP line cap labels** -- you can now configure diagrams to show Media information as a line cap label for xDP links.
