NIM-14955 Documented new feature - visio export

--- a/docs/releases/release_notes/7.0.md
+++ b/docs/releases/release_notes/7.0.md
@@ -164,6 +164,12 @@ Each operation requires its specific permission, and unauthorized actions are pr
 #### Diagrams
 
 - **Added Media to xDP line cap labels** -- you can now configure diagrams to show Media information as a line cap label for xDP links.
+- **Visio Export** -- An "Export to VSDX" button has been added to the [Diagrams toolbar](../../IP_Fabric_GUI/diagrams/network_viewer.md#export-current-view-to-svgpngvsdx). This feature allows diagrams to be exported as `.vsdx` files, which can be opened in Visio.
+
+  !!! Info "NOT Supported"
+       - Export of `Intent checks` in diagrams (colorful nodes are not supported).
+       - Export of temporarily visible hidden nodes in "Show Hidden Nodes" mode.
+       - Export of group boundaries.
 
 #### Interactive API Documentation
 
@@ -260,7 +266,7 @@ Several API endpoints have been updated or removed in this major release. This c
 - `/tables/networks/policies/routing/interfaces: status`
 - `/tables/inventory/devices: mac`
 
-### Frontend URL changes
+### Frontend URL Changes
 
 #### Removed Alias `f` in URLs
 
