ST-392 Add to RN SSO redirectURIs changes

--- a/docs/releases/release_notes/7.0.md
+++ b/docs/releases/release_notes/7.0.md
@@ -20,6 +20,17 @@ tags: ["draft"]
 
 If you are using custom Role-Based Access Control (RBAC) to restrict access to certain IP Fabric elements based on role, ensure that users have the appropriate permissions for new tables and capabilities. After the upgrade, please run the script found in the Python SDK: [Managed RBAC Configuration](https://gitlab.com/ip-fabric/integrations/python-ipfabric/-/blob/develop/examples/settings/RBAC/managed_rbac.py) (`managed_rbac.py`).
 
+Upgrade to `7.0` will break custom SSO integrations and will require a change to the `/etc/ipf-dex.yaml` file. Simply replace the versioned `redirectURIs` with `api/oauth2/external/<SSO_PROVIDER_NAME>` and then run `systemctl restart ipf-dex`.
+
+  ```yaml
+  staticClients:
+    - id: ipfabric
+      redirectURIs:
+        - "https://<YOUR_IPF_INSTANCE_URL>/api/oauth2/external/<SSO_PROVIDER_NAME>"
+  ```
+
+For more information, please refer to the [SSO documentation](../../IP_Fabric_Settings/administration/sso.md#static-clients). If you would like assistance, please contact your Solution Architect or Support Team.
+
 ### New Features
 
 #### Extensions (Engineering Preview)
