NIM-16522 AWS DX Transit VIF to 7.0 RN

--- a/docs/releases/release_notes/7.0.md
+++ b/docs/releases/release_notes/7.0.md
@@ -134,6 +134,8 @@ Each operation requires its specific permission, and unauthorized actions are pr
     - `/tables/cloud/nodes/inventory`
     - `/tables/cloud/nodes/tags`
 
+- **AWS Direct Connect Transit VIF support** -- Routing via Transit Virtual Interfaces over dedicated/hosted connections is now supported in E2E path lookup. To enable this, the new task **“BGP Advertised Routes” must be activated** on the on-prem routers where AWS Direct Connect connections terminate. More information can be found in the [Dynamic Routing](#dynamic-routing) section.
+
 #### SD-WAN
 
 - **New Capabilities -- Cisco Viptela** -- New tables collect Bi-directional Forwarding Detection (BFD) and control plane connection data.
