SA-576 Update 7.0 Release Notes

--- a/docs/releases/release_notes/7.0.md
+++ b/docs/releases/release_notes/7.0.md
@@ -81,9 +81,17 @@ Extensions are governed by a set of atomic permissions that can be assigned thro
 Manageable permissions include:
 
 - Viewing Extensions dashboard
+  - `GET: /extensions`
+- Viewing Extension details
+  - `GET: /extensions/{extensionId}`
 - Registering new Extensions
+  - `POST: /extensions/docker-image`
+  - `POST: /extensions/docker-zip`
 - Starting/Stopping Extensions
+  - `POST: /extensions/{extensionId}/start`
+  - `POST: /extensions/{extensionId}/stop`
 - Un-registering Extensions
+  - `DELETE: /extensions/{extensionId}`
 
 Each operation requires its specific permission, and unauthorized actions are prevented both at UI level (hidden buttons) and API level (`403 Forbidden responses`).
 
@@ -103,6 +111,7 @@ Each operation requires its specific permission, and unauthorized actions are pr
     representation](../../IP_Fabric_GUI/technology_tables/index.md#create-links-to-table-views).
 
 - **Discovery force stop** -- A new **[Force Stop](../../IP_Fabric_GUI/discovery_snapshot.md#force-stopping-discovery)** button has been added next to the **Stop** button for immediate discovery termination.
+  - API endpoint `/jobs/{key}/force-stop`
 
   !!! Warning "If You Choose to Force Stop Discovery"
 
@@ -267,6 +276,12 @@ Several API endpoints have been updated or removed in this major release. This c
   - except `/tables/interfaces/errors/disabled`
 - `/tables/interfaces/drops/*`
 
+### Added Endpoint
+
+Along with other new features and tables mentioned in this release note the following new endpoint has been also added:
+
+- `/settings/networks/exclude`: Append discovery networks settings exclude list
+
 #### Replaced Endpoint Properties
 
 - **NTP Synchronization Status** -- Some vendors report reachable status along with synchronization status, leading to incorrectly marking some sources as not reachable.
@@ -364,6 +379,7 @@ If you're interested in trying our new beta features, please contact your Custom
     - `routingTable`
     - `stp`
     - `vlan`
+  - New VeloCloud Overlay Table: `/tables/sdwan/velocloud/overlay`
 
 - **Opengear Discovery**
   - Additional Opengear console servers can be discovered:
