NIM-16641: add documentation about extensions FF

--- a/docs/releases/release_notes/7.0.md
+++ b/docs/releases/release_notes/7.0.md
@@ -1,6 +1,7 @@
 ---
 description: In this section, you can find the release notes for v7.0 releases.
 tags: ["draft"]
+# Don't forgot to edit `Feature_Flags.md`
 ---
 
 # IP Fabric v7.0
@@ -22,12 +23,12 @@ If you are using custom Role-Based Access Control (RBAC) to restrict access to c
 
 Upgrade to `7.0` will break custom SSO integrations and will require a change to the `/etc/ipf-dex.yaml` file. Simply replace the versioned `redirectURIs` with `api/oauth2/external/<SSO_PROVIDER_NAME>` and then run `systemctl restart ipf-dex`.
 
-  ```yaml
-  staticClients:
-    - id: ipfabric
-      redirectURIs:
-        - "https://<YOUR_IPF_INSTANCE_URL>/api/oauth2/external/<SSO_PROVIDER_NAME>"
-  ```
+```yaml
+staticClients:
+  - id: ipfabric
+    redirectURIs:
+      - "https://<YOUR_IPF_INSTANCE_URL>/api/oauth2/external/<SSO_PROVIDER_NAME>"
+```
 
 For more information, please refer to the [SSO documentation](../../IP_Fabric_Settings/administration/sso.md#static-clients). If you would like assistance, please contact your Solution Architect or Support Team.
 
@@ -92,6 +93,10 @@ Manageable permissions include:
   - `POST: /extensions/{extensionId}/stop`
 - Un-registering Extensions
   - `DELETE: /extensions/{extensionId}`
+- View Extension logs
+  - `GET: /extensions/{extensionId}/logs`
+- Download Extension logs
+  - `GET: /extensions/{extensionId}/logs/download`
 
 Each operation requires its specific permission, and unauthorized actions are prevented both at UI level (hidden buttons) and API level (`403 Forbidden responses`).
 
@@ -111,13 +116,14 @@ Each operation requires its specific permission, and unauthorized actions are pr
     representation](../../IP_Fabric_GUI/technology_tables/index.md#create-links-to-table-views).
 
 - **Discovery force stop** -- A new **[Force Stop](../../IP_Fabric_GUI/discovery_snapshot.md#force-stopping-discovery)** button has been added next to the **Stop** button for immediate discovery termination.
+
   - API endpoint `/jobs/{key}/force-stop`
 
-  !!! Warning "If You Choose to Force Stop Discovery"
+    !!! Warning "If You Choose to Force Stop Discovery"
 
-      The snapshot data may be inconsistent and unusable.
+        The snapshot data may be inconsistent and unusable.
 
-      To ensure UI access is maintained after a discovery **Force Stop**, any system jobs scheduled to start afterward will be cancelled.
+        To ensure UI access is maintained after a discovery **Force Stop**, any system jobs scheduled to start afterward will be cancelled.
 
 - **Pinnable Pages in the Technology Tables** -- Each page in the **Technology Tables** can be pinned to the main menu under the **Technology** section, see [Pin Pages to the Main Menu for Quick Access](../../IP_Fabric_GUI/technology_tables/index.md#pin-pages-to-the-main-menu-for-quick-access).
 - **Dashboard with Multiple Views** -- You can now create multiple views on your Dashboard fitting your needs. Just add a new tab panel, give it a name and select desired widgets.
@@ -189,9 +195,10 @@ Each operation requires its specific permission, and unauthorized actions are pr
 - **Visio Export** -- An "Export to VSDX" button has been added to the [Diagrams toolbar](../../IP_Fabric_GUI/diagrams/network_viewer.md#export-current-view-to-svgpngvsdx). This feature allows diagrams to be exported as `.vsdx` files, which can be opened in Visio.
 
   !!! Info "NOT Supported"
-       - Export of `Intent checks` in diagrams (colorful nodes are not supported).
-       - Export of temporarily visible hidden nodes in "Show Hidden Nodes" mode.
-       - Export of group boundaries.
+
+      - Export of `Intent checks` in diagrams (colorful nodes are not supported).
+      - Export of temporarily visible hidden nodes in "Show Hidden Nodes" mode.
+      - Export of group boundaries.
 
 #### Interactive API Documentation
 
@@ -316,7 +323,7 @@ Along with other new features and tables mentioned in this release note the foll
 
 System administration UI on port `8443` will be removed in the near future. In 7.0 we are providing replacements for its functionality.
 
-For more details, see the [System Administration UI](../../../System_Administration/System_Administration_UI) documentation.
+For more details, see the [System Administration UI](../../System_Administration/System_Administration_UI/index.md) documentation.
 
 ### Intent Rules
 
