--- a/docs/releases/release_notes_low-level/6.x/6.10.x/6.10.0.md
+++ b/docs/releases/release_notes_low-level/6.x/6.10.x/6.10.0.md
@@ -6,7 +6,7 @@ search:
 
 # LLRN 6.10.0
 
-These are low-level release notes for IP Fabric release `6.10.0`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don't have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release of IP Fabric contains a total of 24 issues.
+These are low-level release notes for IP Fabric release `6.10.0`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don't have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release of IP Fabric contains a total of 27 issues.
 
 ## Bugs
 
@@ -37,7 +37,10 @@ Task may be associated into Epics or Stories to form complex features.
 - `NIM-15734` -- Medium -- change `ipf-system-administration` to point to new service UI
 - `NIM-15735` -- Medium -- `ipf-api` should check available version in udate service api
 - `NIM-15760` -- Medium -- Correct regex for IPv4 mask in validation schema for getEnterpriseRouteTable command for velocloud
+- `NIM-15790` -- Medium -- Create page for an avarage user of the appliance
 - `NIM-15910` -- Medium -- [EoL] - update Arista, HP and Cisco for 6.10, 7.0 and 7.1
+- `NIM-15916` -- Medium -- remove `sys-update.sh` from 6.10 onwards
 - `NIM-15959` -- Medium -- Deprecate avarage counters tables
+- `NIM-15982` -- Highest -- `ipf-system-upgrade` change default `/docs` to something else to prevent possible collide with main application during the upgrade
 - `NIM-15983` -- Medium -- [EoL] - make 'replacement' field nullable for 6.10
 - `NIM-16023` -- Highest -- Keep the original upgrade path for 6.x next to new upgrade service
