--- a/docs/releases/release_notes_low-level/6.x/6.6.x/6.6.2.md
+++ b/docs/releases/release_notes_low-level/6.x/6.6.x/6.6.2.md
@@ -29,7 +29,7 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - `NIM-13259` -- Medium -- azure: serviceDetails command fails with 400
 - `NIM-13264` -- High -- After maintenance, `Error: ENOENT: no such file or directory, open '/var/log/nimpee/snowplow.log'` is shown
 - `NIM-13269` -- Medium -- System Administration UI - `Restore or Backup` dialog does not disappear while backup/restore is in progress
-- `NIM-13275` -- Medium -- nimpee-api constantly failed when no default getweay is present
+- `NIM-13275` -- Medium -- nimpee-api constantly failed when no default gateway is present
 - `NIM-13276` -- Medium -- Cisco ACI - E2EPL - incorrect path evaluation on first hop
 - `NIM-13282` -- Medium -- Configuration Wizard - no credentials after reboot, those are shown only after visiting `Device Credentials` tab
 - `NIM-13289` -- High -- Advanced Packet Option - Display issue with the buttons: Delete / Saves As.. / Save
