NIM-16851 Add RN for 6.10.5 and prepare 6.10.5 for GA

--- a/docs/releases/release_notes/6.10.md
+++ b/docs/releases/release_notes/6.10.md
@@ -8,6 +8,21 @@ description: In this section, you can find the release notes for v6.10 releases.
 
 --8<-- "snippets/clear_browser_cache.md"
 
+## v6.10.5 (November 27th, 2024; GA)
+
+```
+SHA256 (ipfabric-update-6-10-5+0.tar.gz.sig) = dc976c3f218651c950f73f0b57289cb2a58668068d1d00ba99acd0eb71e064bb
+MD5 (ipfabric-update-6-10-5+0.tar.gz.sig) = 010903af5e16004637afc6892c57263b
+SHA256 (ipfabric-6-10-5+0.ova) = f5df9ab32a4070729d03943bac47a235f53a28078f534df760c4f184aa074d02
+MD5 (ipfabric-6-10-5+0.ova) = 3905c67d59630528f64b7064b1f3c939
+SHA256 (ipfabric-6-10-5+0.qcow2) = 052e6fd8ed64979b7349547cd8e553bc9b4566838bd1729bf12cf4e9e7782b80
+MD5 (ipfabric-6-10-5+0.qcow2) = f17cef9d3e28cc803bd9e395cbbf6925
+SHA256 (ipfabric-6-10-5+0.vmdk) = da174690a0f742fda38cc736586e0ae71ff1d56e4d2a19a2ef8fef0e0db63cce
+MD5 (ipfabric-6-10-5+0.vmdk) = 6c0ccffa2514d19d5bb59ca1cb5a8582
+```
+
+- Fixed issue for air-gapped environments unable to reach `callhome.ipfabric.io` service.
+
 ## v6.10.4 (October 21st, 2024; GA)
 
 ```
