New IPv4 Managed IP Summary table (NIM-16632)

--- a/docs/releases/release_notes/7.0.md
+++ b/docs/releases/release_notes/7.0.md
@@ -127,6 +127,9 @@ Each operation requires its specific permission, and unauthorized actions are pr
 
 - **Pinnable Pages in the Technology Tables** -- Each page in the **Technology Tables** can be pinned to the main menu under the **Technology** section, see [Pin Pages to the Main Menu for Quick Access](../../IP_Fabric_GUI/technology_tables/index.md#pin-pages-to-the-main-menu-for-quick-access).
 - **Dashboard with Multiple Views** -- You can now create multiple views on your Dashboard fitting your needs. Just add a new tab panel, give it a name and select desired widgets.
+- **IPv4 Managed IP Summary table** -- A new table providing an overview of sites and all their IPv4 subnets. For each subnet, it provides an information about its gateways, count of users and total counts of different VLAN IDs and VRF names. This new table is going to replace two existing technology tables -- `Managed Networks` and `Gateway redundancy` tables -- which are deprecated now and will be removed in the next major IPF release. Unlike the existing tables, the new table provides information about all subnets regardless of the devices where they are configured.
+
+For more information, please refer to the [IPv4 Managed IP Summary table documentation](../../IP_Fabric_GUI/technology_tables/addressing/ipv4-managed-ip-summary.md).
 
 #### Cloud
 
@@ -288,6 +291,7 @@ Several API endpoints have been updated or removed in this major release. This c
 Along with other new features and tables mentioned in this release note the following new endpoint has been also added:
 
 - `/settings/networks/exclude`: Append discovery networks settings exclude list
+- `/tables/addressing/ipv4-managed-ip-summary`: Provides data for a new `IPv4 Managed IP Summary` table
 
 #### Replaced Endpoint Properties
 
