NIM-14653 update release notes with changes in handling of missing credentials

--- a/docs/releases/release_notes/7.2.md
+++ b/docs/releases/release_notes/7.2.md
@@ -22,3 +22,9 @@ tags: ["draft"]
 
 - We have updated default tabs settings for consoleServer devices in Device Explorer:
   added Serial Ports, removed QoS, MAC and Port Channel. This resets previous tab settings for this device type.
+
+#### Discovery Settings
+
+- Saving discovery settings with missing or expired credentials is now allowed. Users can decide whether the
+  missing data is important for running the discovery or can add the data later. Clear messages and dialogs
+  will inform users of any potential issues.
