NIM-16076: Deprecate Managed Networks and Gateway Redundancy tables

--- a/docs/releases/release_notes/7.2.md
+++ b/docs/releases/release_notes/7.2.md
@@ -16,6 +16,13 @@ tags: ["draft"]
 
 ## v7.2.0 (UNRELEASED)
 
+### API Endpoints Deprecation
+
+The below API endpoints have been marked as deprecated and the intention is to remove them in the next major version `8.0`.
+
+- `/tables/networks/gatewayRedundancy`
+- `/tables/networks/networks`
+
 ### Improvements
 
 #### GUI
