Document graph edge supporting multiple labels

--- a/docs/releases/release_notes/7.2.md
+++ b/docs/releases/release_notes/7.2.md
@@ -29,6 +29,7 @@ The below API endpoints have been marked as deprecated and the intention is to r
 
 - We have updated default tabs settings for consoleServer devices in Device Explorer:
   added Serial Ports, removed QoS, MAC and Port Channel. This resets previous tab settings for this device type.
+- Edges in topology graphs now support multiple labels, which can be displayed either inline or on separate lines. These settings are customizable in the Visualization Setup panel of the Network Viewer, allowing configuration for each protocol or group type individually.
 
 #### Discovery Settings
 
