NAE/NIM-16631 - new lsvpn endpoints

--- a/docs/releases/release_notes/7.0.md
+++ b/docs/releases/release_notes/7.0.md
@@ -173,6 +173,13 @@ For more information, please refer to the [IPv4 Managed IP Summary table documen
 
 - **New Capabilities -- Check Point** -- The ability to collect Enforcement Point data using a new extended command, allowing access to expert mode when explicitly defined. See [Checkpoint Known Issues](../../support/known_issues/Vendors/checkpoint.md#identity-awareness-support).
 
+- **New Capabilities -- Palo Alto** -- The ability to collect information on LSVPN (Large Scale VPN) endpoint information. New tables:
+
+  - **Gateways** - list of discovered LSVPN Gateways and their settings
+    - `/tables/security/lsvpn/gateways`
+  - **Satellites** - list of all connected satellites and their settings
+    - `/tables/security/lsvpn/satellites`
+
 - **New Capabilities -- Stormshield:**
 
   - Support for collecting NAT rules has been added.
@@ -292,6 +299,8 @@ Along with other new features and tables mentioned in this release note the foll
 
 - `/settings/networks/exclude`: Append discovery networks settings exclude list
 - `/tables/addressing/ipv4-managed-ip-summary`: Provides data for a new `IPv4 Managed IP Summary` table
+- `/tables/security/lsvpn/gateways`: List of discovered LSVPN Gateways and their settings
+- `/tables/security/lsvpn/satellites`: List of all connected satellites and their settings
 
 #### Replaced Endpoint Properties
 
