--- a/docs/releases/release_notes/7.0.md
+++ b/docs/releases/release_notes/7.0.md
@@ -1,21 +1,14 @@
 ---
 description: In this section, you can find the release notes for v7.0 releases.
-tags: ["draft"]
-# Don't forgot to edit `Feature_Flags.md`
 ---
 
 # IP Fabric v7.0
-
-!!! danger "Unreleased Version"
-
-    This is an upcoming IP Fabric version, which has not been released yet and
-    is not available for download.
 
 --8<-- "snippets/upgrade_version_policy.md"
 
 --8<-- "snippets/clear_browser_cache.md"
 
-## v7.0.0 (UNRELEASED)
+## v7.0.7 (December 5th, 2024; EA)
 
 ### Post-Upgrade Notices
 
