ST-398_automated_sso_setup [7.2]

--- a/docs/releases/release_notes/7.2.md
+++ b/docs/releases/release_notes/7.2.md
@@ -23,6 +23,15 @@ The below API endpoints have been marked as deprecated and the intention is to r
 - `/tables/networks/gatewayRedundancy`
 - `/tables/networks/networks`
 
+### New Features
+
+#### Automated SSO
+
+- We have developed a new script to simplify the SSO setup process for the IP
+  Fabric application. More details can be found on the
+  [Automated Single Sign-On (SSO)](../../IP_Fabric_Settings/administration/sso/#automated-sso-enablement-for-the-ipf-applicatio/)
+  page.
+
 ### Improvements
 
 #### GUI
