--- a/docs/releases/release_notes/7.0.md
+++ b/docs/releases/release_notes/7.0.md
@@ -147,6 +147,25 @@ For more information, please refer to the [IPv4 Managed IP Summary table documen
 
 - **AWS Direct Connect Transit VIF support** -- Routing via Transit Virtual Interfaces over dedicated/hosted connections is now supported in E2E path lookup. To enable this, the new task **“BGP Advertised Routes” must be activated** on the on-prem routers where AWS Direct Connect connections terminate. More information can be found in the [Dynamic Routing](#dynamic-routing) section.
 
+- **AWS Network Load Balancers support** -- data collection & E2E path lookup via NLB nodes for all listener types. Path lookup via AWS private link is not supported yet.
+
+  !!! Warning "Don't forget to update IAM policy"
+
+      In order to collect AWS Network Load Balancers, respective IAM policy has to be updated. You can download the new policy [here](../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/Vendors_API/aws/IAM-policy-IPF_7.0.json).
+      The only difference from the previous policy is a new statement allowing all `Describe*` API endpoints in the `elasticloadbalancing` service:
+      ```
+      {
+        "Sid": "IPFabricElasticLoadBalancing",
+        "Effect": "Allow",
+        "Action": [
+            "elasticloadbalancing:Describe*"
+        ],
+        "Resource": "*"
+      }
+      ```
+
+  
+
 #### SD-WAN
 
 - **New Capabilities -- Cisco Viptela** -- New tables collect Bi-directional Forwarding Detection (BFD) and control plane connection data.
