NIM-16879: SilverPeak API key support [7.2]

--- a/docs/releases/release_notes/7.2.md
+++ b/docs/releases/release_notes/7.2.md
@@ -45,3 +45,7 @@ The below API endpoints have been marked as deprecated and the intention is to r
 - Saving discovery settings with missing or expired credentials is now allowed. Users can decide whether the
   missing data is important for running the discovery or can add the data later. Clear messages and dialogs
   will inform users of any potential issues.
+
+#### Vendor Support and Improvements
+
+- Added Silver Peak API key authentication support.
