NIM-15668 Remove system administration

--- a/docs/releases/release_notes/7.0.md
+++ b/docs/releases/release_notes/7.0.md
@@ -348,9 +348,12 @@ Along with other new features and tables mentioned in this release note the foll
 
 ### System Administration UI Deprecation
 
-System administration UI on port `8443` will be removed in the near future. In 7.0 we are providing replacements for its functionality.
+System administration UI on port `8443` will be removed in the near future. In version `7.0`, we are introducing replacements for its functionality.
 
-For more details, see the [System Administration UI](../../System_Administration/System_Administration_UI/index.md) documentation.
+* [System Status](../../IP_Fabric_GUI/tips/system_status.md)
+* [Backup and Maintenance](../../System_Administration/Command_Line_Interface/How_to/backup_restore_CLI.md)
+* [System Update](../../System_Administration/system_update.md)
+* [Restore Admin Access](../../System_Administration/IPF_CLI_Config/set_gui_admin_pass.md)
 
 ### Intent Rules
 
