--- a/docs/releases/release_notes/7.2.md
+++ b/docs/releases/release_notes/7.2.md
@@ -23,6 +23,15 @@ The below API endpoints have been marked as deprecated and the intention is to r
 - `/tables/networks/gatewayRedundancy`
 - `/tables/networks/networks`
 
+### System Administration UI Removal
+
+The System Administration UI on port `8443` has been deprecated in version `7.0` and is no longer accessible. All its functionalities have been replaced by an alternative:
+
+* [System Status](../../IP_Fabric_GUI/tips/system_status.md)
+* [Backup and Maintenance](../../System_Administration/Command_Line_Interface/How_to/backup_restore_CLI.md)
+* [System Update](../../System_Administration/system_update.md)
+* [Restore Admin Access](../../System_Administration/IPF_CLI_Config/set_gui_admin_pass.md)
+
 ### New Features
 
 #### Automated SSO
