NIM-17163 NIM-17282 Update RN and new system upgrade img

--- a/docs/releases/release_notes/6.10.md
+++ b/docs/releases/release_notes/6.10.md
@@ -63,14 +63,7 @@ upgrade service.
 This service requires re-authentication with `osadmin` account, even if you are
 already logged in the System Administration interface.
 
-![Authentication for 7.x upgrades](6.10_authenticate_for_7x_upgrades.png){: .center}
-
-!!! Note
-
-    If you have disabled sign-in pop-ups (i.e., the sign-in window does not
-    appear), you can log in directly using the following URL:
-
-    `https://osadmin:<password>@<IP Fabric FQDN or URL>`
+![Authentication for 7.x upgrades](6.10_authenticate_for_7x_upgrades.jpg)
 
 After successful authentication, the new upgrade interface appears, providing
 two options:
