--- a/docs/releases/release_notes/7.0.md
+++ b/docs/releases/release_notes/7.0.md
@@ -46,6 +46,42 @@ staticClients:
 
 For more information, please refer to the [SSO documentation](../../IP_Fabric_Settings/administration/sso.md#static-clients). If you would like assistance, please contact your Solution Architect or Support Team.
 
+### New Upgrade Process
+
+IP Fabric version `6.10` introduced a new upgrade portal for streamlined upgrades to version `7.x` and later.
+
+The new upgrade portal can be accessed via the following URL: `https://<YOUR_IPF_INSTANCE_URL_OR_IP>/ipf-system-upgrade/` or through System Administration interface on port `8443`.
+
+![Upgrade options](6.10_upgrade_options.png)
+
+#### Upgrade to `7.x` Based Version
+
+When you choose to upgrade to version `7.x`, you will be redirected to the new
+upgrade service.
+
+This service requires re-authentication with `osadmin` account, even if you are
+already logged in the System Administration interface.
+
+![Authentication for 7.x upgrades](6.10_authenticate_for_7x_upgrades.jpg)
+
+After successful authentication, the new upgrade interface appears, providing
+two options:
+
+1. Manually upload the upgrade file.
+2. Upgrade over the internet, if the appliance is connected.
+
+![Steps to upgrade system to 7.x](6.10_upgrades_to_7x_steps.png)
+
+The new upgrade service operates on port `443`, so no additional firewall ports
+need to be opened.
+
+During the upgrade, the service displays the progress, and once the upgrade is
+complete, the appliance will reboot automatically.
+
+![Progress bar of the upgrade](6.10_progress_bar_of_upgrade.png)
+
+For more information, see full description in [6.10 release notes](6.10.md).
+
 ### New Features
 
 #### Extensions (Engineering Preview)
