--- a/docs/releases/release_notes/7.0.md
+++ b/docs/releases/release_notes/7.0.md
@@ -20,6 +20,53 @@ tags: ["draft"]
 
 If you are using custom Role-Based Access Control (RBAC) to restrict access to certain IP Fabric elements based on role, ensure that users have the appropriate permissions for new tables and capabilities. After the upgrade, please run the script found in the Python SDK: [Managed RBAC Configuration](https://gitlab.com/ip-fabric/integrations/python-ipfabric/-/blob/develop/examples/settings/RBAC/managed_rbac.py) (`managed_rbac.py`).
 
+Upgrade to `7.0` will break custom SSO integrations and will require a change to the `/etc/ipf-dex.yaml` file. Simply replace the versioned `redirectURIs` with `api/oauth2/external/<SSO_PROVIDER_NAME>` and then run `systemctl restart ipf-dex`.
+
+```yaml
+staticClients:
+  - id: ipfabric
+    redirectURIs:
+      - "https://<YOUR_IPF_INSTANCE_URL>/api/oauth2/external/<SSO_PROVIDER_NAME>"
+```
+
+For more information, please refer to the [SSO documentation](../../IP_Fabric_Settings/administration/sso.md#static-clients). If you would like assistance, please contact your Solution Architect or Support Team.
+
+### New Upgrade Process
+
+IP Fabric version `6.10` introduced a new upgrade portal for streamlined upgrades to version `7.x` and later.
+
+The new upgrade portal can be accessed via the following URL: `https://<YOUR_IPF_INSTANCE_URL_OR_IP>/ipf-system-upgrade/` or through System Administration interface on port `8443`.
+
+![Upgrade options](6.10_upgrade_options.png)
+
+#### Upgrade to `7.x` Based Version
+
+When you choose to upgrade to version `7.x`, you will be redirected to the new
+upgrade service.
+
+This service requires re-authentication with `osadmin` account, even if you are
+already logged in the System Administration interface.
+
+![Authentication for 7.x upgrades](6.10_authenticate_for_7x_upgrades.jpg)
+
+After successful authentication, the new upgrade interface appears, providing
+two options:
+
+1. Manually upload the upgrade file.
+2. Upgrade over the internet, if the appliance is connected.
+
+![Steps to upgrade system to 7.x](6.10_upgrades_to_7x_steps.png)
+
+The new upgrade service operates on port `443`, so no additional firewall ports
+need to be opened.
+
+During the upgrade, the service displays the progress, and once the upgrade is
+complete, the appliance will reboot automatically.
+
+![Progress bar of the upgrade](6.10_progress_bar_of_upgrade.png)
+
+For more information, see full description in [6.10 release notes](6.10.md).
+
 ### New Features
 
 #### GUI
